--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="./css/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-        <title>Document</title>
+        <title>Dashboard</title>
     </head>
     <body>
         <header>
@@ -23,14 +23,14 @@
                                 <input type="search" name="" class="w-100 rounded searchbar" placeholder="&#xF002; Prova a cercare: lezioni di Laravel" style="font-family:Arial, FontAwesome">
                             </div>
                             <div class="col-1 col-md-2 d-flex justify-content-around">
-                                <div class="w-20 d-none d-md-block me-2">
+                                <div class="w-20 d-none d-md-block me-2 text-secondary">
                                     <i class="fa-solid fa-ellipsis-vertical"></i>
                                     <i class="fa-solid fa-bars"></i>
                                 </div>
-                                <div class="w-20 d-none d-md-block me-2">
+                                <div class="w-20 d-none d-md-block me-2 text-secondary">
                                     <i class="fa-solid fa-circle-question"></i>
                                 </div>
-                                <div class="w-20 d-none d-md-block me-2">
+                                <div class="w-20 d-none d-md-block me-2 text-secondary">
                                     <i class="fa-solid fa-ellipsis-vertical"></i>
                                 </div>
                                 <div class=" w-20 w-sm-100 me-2">
@@ -58,18 +58,26 @@
                         <div class="row flex-column justify-content-between h-100">
                             <div class="col text-center">
                                 <div class="sidebar-text mt-4 s">
-                                    <i class="fa-solid fa-house me-2"></i> Home
+                                    <span class="sidebar-select pointer d-inline-block">
+                                        <i class="fa-solid fa-house me-2"></i> Home
+                                    </span>
                                 </div>
                                 <div class="sidebar-text mt-3 s">
-                                    <i class="fa-solid fa-bars-staggered me-2"></i> Stats
+                                    <span class="sidebar-select pointer d-inline-block">
+                                        <i class="fa-solid fa-bars-staggered me-2"></i> Stats
+                                    </span>
                                 </div>
                                 <div class="sidebar-text mt-3 s">
-                                    <i class="fa-solid fa-signal me-2"></i> Signals
+                                    <span class="sidebar-select pointer d-inline-block">
+                                        <i class="fa-solid fa-signal me-2"></i> Signals
+                                    </span>
                                 </div>
                             </div>
                             <div class="col align-items-end d-flex justify-content-center">
                                 <div class="sidebar-text s">
-                                    <i class="fa-solid fa-gear me-2 mb-4"></i> Admin
+                                    <span class="sidebar-select pointer">
+                                        <i class="fa-solid fa-gear me-2 mb-4"></i> Admin
+                                    </span>
                                 </div>
                             </div>
                         </div>
@@ -78,18 +86,26 @@
                         <div class="row flex-column justify-content-between h-100">
                             <div class="col text-center">
                                 <div class="sidebar-ico mt-4">
-                                    <i class="fa-solid fa-house"></i>
+                                    <span class="sidebar-select">
+                                        <i class="fa-solid fa-house"></i>
+                                    </span>
                                 </div>
                                 <div class="sidebar-ico mt-3">
-                                    <i class="fa-solid fa-bars-staggered"></i>
+                                    <span class="sidebar-select">
+                                        <i class="fa-solid fa-bars-staggered"></i>
+                                    </span>
                                 </div>
                                 <div class="sidebar-ico mt-3">
-                                    <i class="fa-solid fa-signal"></i>
+                                    <span class="sidebar-select">
+                                        <i class="fa-solid fa-signal"></i>
+                                    </span>
                                 </div>
                             </div>
                             <div class="col align-items-end d-flex justify-content-center">
                                 <div class="sidebar-ico">
-                                    <i class="fa-solid fa-gear"></i>
+                                    <span class="sidebar-select">
+                                        <i class="fa-solid fa-gear"></i>
+                                    </span>
                                 </div>
                             </div>
                         </div>
@@ -98,8 +114,8 @@
                 <div class="body-content">
                     <div class="container-fluid">
                         <div class="row lightblue-bg flex-column flex-sm-row pt-2 pb-2">
-                            <div class="col-12 col-sm-3 order-sm-3 d-flex justify-content-end align-items-start">
-                                <button class="btn btn-primary text-white" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><span class="x-s me-3">Nuovo studente</span><i class="fa-sharp fa-solid fa-plus topbar-icon"></i></button>
+                            <div class="col-12 col-sm-3 order-sm-3 d-flex justify-content-sm-end align-items-start">
+                                <button class="btn btn-primary text-white ps-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><span class="s me-3">Nuovo studente</span><i class="fa-sharp fa-solid fa-plus topbar-icon scale-hover"></i></button>
                                 <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
                                 <div class="offcanvas-header">
                                     <h6 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Inserisci un nuovo studente</h6>
@@ -194,15 +210,15 @@
                             <div class="col-12 col-sm-6 order-sm-1 text-white">
                                 <div>
                                     <span class="fs-4">Boolean</span>
-                                    <span class="blue-bg">Piano blaze</span>
+                                    <span class="blue-bg d-inline-block pointer">Piano blaze</span>
                                 </div>
                                 <div>
-                                    <span class="blue-bg">3 app</span>
+                                    <span class="blue-bg d-inline-block pointer">3 app</span>
                                     <i class="fa-solid fa-angles-right fs-6"></i>
-                                    <span class="blue-bg d-md-none"><i class="fa-sharp fa-solid fa-plus"></i></span>
-                                    <span class="blue-bg d-none d-md-inline-block">Boolean mobile app</span>
-                                    <span class="blue-bg d-none d-md-inline-block">Boolean web app</span>
-                                    <span class="blue-bg d-none d-md-inline-block">Boolean blog app</span>
+                                    <span class="blue-bg d-inline-block d-md-none pointer"><i class="fa-sharp fa-solid fa-plus"></i></span>
+                                    <span class="blue-bg d-none d-md-inline-block pointer">Boolean mobile app</span>
+                                    <span class="blue-bg d-none d-md-inline-block pointer">Boolean web app</span>
+                                    <span class="blue-bg d-none d-md-inline-block pointer">Boolean blog app</span>
                                 </div>
                             </div>
                             <div class="col-12 col-sm-3 order-sm-2 text-white x-s">
@@ -218,7 +234,7 @@
                             <div class="col-12 col-md-8 mb-3">
                                 <div class="card mt-4">
                                     <div class="card-header py-0">
-                                        <h3 class="fs-4">Prossime classi</h3>
+                                        <h3 class="fs-4 pt-2">Prossime classi</h3>
                                     </div>
                                     <div class="card-body">
                                         <table class="table table-sm">
@@ -334,38 +350,56 @@
                                 </div>
                                 <div class="card mt-4">
                                     <div class="card-header py-0">
-                                        <h2 class="fs-4">F.A.Q.</h2>
+                                        <h2 class="fs-4 pt-2">F.A.Q.</h2>
                                     </div>
                                     <div class="card-body py-0">
                                         <div class="accordion accordion-flush" id="accordionFlushExample">
                                             <div class="accordion-item">
                                               <h2 class="accordion-header" id="flush-headingOne">
-                                                <button class="accordion-button collapsed pt-3 pb-2" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                                                  Come aggiungere un nuovo studente?
+                                                <button class="accordion-button collapsed pt-3 pb-3" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                                  <span class="s">
+                                                    Come aggiungere un nuovo studente?
+                                                  </span> 
                                                 </button>
                                               </h2>
                                               <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                                                <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                                                <div class="accordion-body">
+                                                    <span class="s">
+                                                        Clicca sul + in alto nella sezione blu.
+                                                      </span>
+                                                </div>
                                               </div>
                                             </div>
                                             <div class="accordion-item">
                                               <h2 class="accordion-header" id="flush-headingTwo">
-                                                <button class="accordion-button collapsed py-2" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                                                  ome posso accedere alle informazioni sul mio account?
+                                                <button class="accordion-button collapsed py-3" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                                                    <span class="s">
+                                                        Come posso accedere alle informazioni sul mio account?
+                                                      </span>
                                                 </button>
                                               </h2>
                                               <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                                                <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+                                                <div class="accordion-body s">
+                                                    <span class="s">
+                                                        Clicca sull'icona della campanella.
+                                                      </span>
+                                                </div>
                                               </div>
                                             </div>
                                             <div class="accordion-item">
                                               <h2 class="accordion-header" id="flush-headingThree">
-                                                <button class="accordion-button collapsed py-2" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                                                  Posso usare questa dashboard da mobile?
+                                                <button class="accordion-button collapsed py-3" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                                                    <span class="s">
+                                                        Posso usare questa dashboard da mobile?
+                                                      </span>
                                                 </button>
                                               </h2>
                                               <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                                                <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+                                                <div class="accordion-body">
+                                                    <span class="s">
+                                                        Certo che si, è sufficiente possedere un dispositivo mobile ed accedere alla tua dashboard da esso.
+                                                      </span>
+                                                </div>
                                               </div>
                                             </div>
                                           </div>
@@ -375,20 +409,20 @@
                             <div class="col-12 col-md-4">
                                 <div class="card mt-4">
                                     <div class="card-header py-0">
-                                        <h2 class="fs-4">Todo</h2>
+                                        <h2 class="fs-4 pt-2">Todo</h2>
                                     </div>
                                     <div class="card-body">
                                         <div class="card-body border border-bottom-0 rounded-top py-1">
-                                            <input type="checkbox" name="" id="">
-                                            <label for="">testo checkbox</label>
+                                            <input type="checkbox" class="pointer">
+                                            <label class="x-s">Kickoff nuove classi</label>
                                         </div>
                                         <div class="card-body border border-bottom-0 py-1">
-                                            <input type="checkbox" name="" id="">
-                                            <label for="">testo checkbox</label>
+                                            <input type="checkbox" class="pointer">
+                                            <label class="x-s">Lezione su bootstrap in classe #75</label>
                                         </div>
                                         <div class="card-body border rounded-bottom py-1">
-                                            <input type="checkbox" name="" id="">
-                                            <label for="">testo checkbox</label>
+                                            <input type="checkbox" class="pointer">
+                                            <label class="x-s">Controllare username Github utenti</label>
                                         </div>
                                     </div>
                                 </div>
