inserimento elementi richiesti obbligatoriamente nel form dell'offcanvas

--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@
                                                     <div class="user-info">
                                                         Nome
                                                     </div>
-                                                    <input type="text" class="form-control">
+                                                    <input type="text" class="form-control" required>
                                                 </div>
                                                 <div class="col-12 col-sm-6 gx-1">
                                                     <div class="user-info">
                                                         Cognome
                                                     </div>
-                                                    <input type="text" class="form-control">
+                                                    <input type="text" class="form-control" required>
                                                 </div>
                                                 <div class="col-12 col-sm-6 gx-1">
                                                     <div class="user-info">
@@ -143,7 +143,7 @@
                                                     </div>
                                                     <div class="input-group mb-3">
                                                         <span class="input-group-text">@</span>
-                                                        <input type="text" class="form-control">
+                                                        <input type="text" class="form-control" required>
                                                     </div>                                                      
                                                 </div>
                                                 <div class="col-12 col-sm-6 gx-1">
@@ -151,26 +151,26 @@
                                                         Password
                                                     </div>
                                                     <div class="mb-3">
-                                                        <input type="password" class="form-control" id="exampleInputPassword1">
+                                                        <input type="password" class="form-control" id="exampleInputPassword1" required>
                                                       </div>
                                                 </div>
                                                 <div class="col-12 gx-1">
                                                     <div class="user-info">
                                                         Indirizzo
                                                     </div>
-                                                    <input type="text" class="form-control">
+                                                    <input type="text" class="form-control" required>
                                                 </div>
                                                 <div class="col-12 col-sm-6 gx-1">
                                                     <div class="user-info">
                                                         Citt&agrave;
                                                     </div>
-                                                    <input type="text" class="form-control">
+                                                    <input type="text" class="form-control" required>
                                                 </div>
                                                 <div class="col-12 col-sm-4 gx-1">
                                                     <div class="user-info">
                                                         Stato
                                                     </div>
-                                                    <select class="form-select pt-0 pb-0" id="inputGroupSelect03" aria-label="Example select with button addon">
+                                                    <select class="form-select pt-0 pb-0" id="inputGroupSelect03" aria-label="Example select with button addon" required>
                                                         <option selected class="option-text">Scegli...</option>
                                                         <option value="1">Terra di mezzo</option>
                                                         <option value="2">Westeros</option>
@@ -181,18 +181,18 @@
                                                     <div class="user-info">
                                                         CAP
                                                     </div>
-                                                    <input type="text" class="form-control">
+                                                    <input type="text" class="form-control" required>
                                                 </div>
                                                 <div class="col-12 gx-1">
                                                     <div class="user-info">
                                                         Foto
                                                     </div>
                                                     <div class="input-group mb-3">
-                                                        <input type="file" class="form-control pt-0 pb-0" id="inputGroupFile01" placeholder="Nessun file selezionato">
+                                                        <input type="file" class="form-control pt-0 pb-0" id="inputGroupFile01" placeholder="Nessun file selezionato" required>
                                                     </div> 
                                                     <div class="mb-3">
                                                         <div class="form-check">
-                                                          <input class="form-check-input" type="checkbox" id="FieldsetCheck">
+                                                          <input class="form-check-input" type="checkbox" id="FieldsetCheck" required>
                                                           <label class="form-check-label" for="FieldsetCheck">
                                                             Seleziona per proseguire
                                                           </label>
